# django-ambient

./: .gitignore  Cargo.toml  README.md  pyproject.toml
django_ambient/: _store.py  cache_calls.py  metrics.py  middleware.py  sql.py  stack.py  urls.py  utils.py  views.py
django_ambient/static/django_ambient/: base.css
django_ambient/templates/django_ambient/: index.html  request_detail.html
src/: lib.rs  ringbuf.rs  sql.rs  store.rs
src/django_ambient/: _core.py  _core.pyi  cache_calls.py  metrics.py  middleware.py  sql.py  stack.py  views.py
src/django_ambient/static/django_ambient/: base.css
src/django_ambient/templates/django_ambient/: index.html  request_detail.html  stack_trace.html
