[project]
name = "django-ambient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "evilwaveforms", email = "8681846+evilwaveforms@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.py" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
